escrita arrumada-final do projeto 1.03

--- a/creditos/cretidos.html
+++ b/creditos/cretidos.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="../css/style.css"/>
+    <link rel="stylesheet" href="../css/style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -16,20 +16,21 @@
   <body>
     <div class="creditos">
       <p class="creditos-texto">
-        Queria começar agradecendo a Resilia Educação pela oportunidade
-        concebida, agradecer também a Karlla e Matheus pelas monitorias sempre muito bem
-        explicadas, o Gabriel izoton pelas aulas maravilhosas, ao William
-        brandley por me ajudar a me organizar e também organizar os sentimentos
-        dentro de mim. Queria agradecer ao William meu grande amigo por sempre
-        estar comigo no discord, Renan, Daniel Fujita, sempre dispostos a me ajudar quando
-        eu estava perdido (e não foram poucas vezes até aqui rsrs). Esse game
-        por mais breve que seja, tentei expressar os medos e os sentimentos que
-        eu tinha/tenho dentro da minha mente e que tento enfrenta-los todos os
-        dias quando acordo para poder evoluir, espero que ele ajude alguém a
-        supera-los, espero que gostem ヽ(o＾▽＾o)ノ.
+        Queria começar agradecendo à Resilia Educação pela oportunidade
+        concebida, agradecer também Karlla e Matheus, pelas monitorias sempre
+        muito bem explicadas, ao Gabriel Izoton pelas aulas maravilhosas, ao
+        William Brandley por me ajudar a me organizar.<br> Meus agradecimentos ao
+        William , Renan, Daniel Fujita, Ivan, por sempre estarem comigo no
+        discord dispostos a me ajudar quando eu estava perdido (e não foram
+        poucas vezes até aqui rsrs). Esse game por mais breve que seja, tentei
+        expressar os medos e os sentimentos que eu tinha/tenho dentro da minha
+        mente e que tento enfrentá-los todos os dias quando acordo para poder
+        evoluir, espero que este game ajude alguém a superá-los, espero que gostem.
+        ヽ(o＾▽＾o)ノ.
       </p>
     </div>
     <div class="audio">
+      +
       <audio preload="auto" autoplay="auto" controls>
         <source src="hello-world.mp3" type="audio/mpeg" />
       </audio>
