--- a/historia-personagens/bite/fase1.html
+++ b/historia-personagens/bite/fase1.html
@@ -21,9 +21,10 @@
       </div>
       <div class="dialogo">
         <p>
-          Um dia, Bite teve que ficar em casa, pois quando sua mulher saiu e ele
-          tinha que cuidar da casa e, assim, tendo que enfrentar seu maior medo
-          de ficar sozinho. Ficar e cuidar da casa??
+          Um dia, Bite teve que ficar em casa, pois quando sua mulher saiu ele
+          teve que cuidar da casa e, assim, tendo que enfrentar seu maior medo
+          de ficar sozinho.<br>
+           Ficar e cuidar da casa??
         </p>
       </div>
       <div class="bite-botao">
