--- a/historia-personagens/bite/fase2.html
+++ b/historia-personagens/bite/fase2.html
@@ -21,8 +21,8 @@
       </div>
       <div class="dialogo">
         <p>
-          Bite olha uma estante de livros quando sozinho em sua casa,o seu medo
-          aparece, e ele se depara com a estante de livros que começa a tomar
+          Bite olha uma estante de livros quando seu medo
+          aparece, ele se depara com a estante de livros, que começa a tomar
           uma forma assustadora em sua mente. O seu medo de ficar sozinho toma
           conta de seu corpo todo, então Bite tem uma decisão:
         </p>
