--- a/historia-personagens/bite/fase3.html
+++ b/historia-personagens/bite/fase3.html
@@ -21,9 +21,9 @@
       </div>
       <div class="dialogo">
         <p>
-          Bite decide entao enfrenter seu medo da solidão e pega um livro para
+          Bite decide enfrenter seu medo da solidão e pega um livro para
           ler, assim se tornando cada vez mais confiante, vivendo cada dia
-          melhor consigo mesmo. É importante enfrentarmos o medo da solidão pois
+          melhor consigo mesmo.<br> É importante enfrentarmos o medo da solidão, pois
           nos torma mais fortes e confiantes.
         </p>
       </div>
