--- a/historia-personagens/josefina/fase1.html
+++ b/historia-personagens/josefina/fase1.html
@@ -21,12 +21,13 @@
       </div>
       <div class="dialogo">
         <p>
-          josefina recebeu uma tarefa de levar uma encomenda para outro reino e
-          teve de aceitar agora esta voltando e teve que desviar seu caminho
-          pois tinham ladinos saqueando os viajantes pelo seu caminho normal.
-          Josefina esta em uma estrada onde nunca esteve antes, com algumas
-          moradias dos lados o caminho parece ser longo, e sua insegurança
-          começa a aumentar, continuar nessa estrada?
+          Josefina aceitou a tarefa de levar uma encomenda para outro reino.
+          Retornando ao seu reino teve que desviar do seu caminho, pois tinham
+          ladinos saqueando os viajantes que passavam pelo local. Josefina,
+          diante de uma estrada onde nunca esteve antes, percebeu algumas
+          moradias acompanhando o caminho, que parecia ser muito longo,quase sem
+          fim, e sua insegurança começou a aumentar diante do novo.<br/>
+          Continuar nessa estrada?
         </p>
       </div>
       <div class="bite-botao">
