--- a/historia-personagens/josefina/fase2.html
+++ b/historia-personagens/josefina/fase2.html
@@ -22,8 +22,8 @@
       <div class="dialogo">
         <p>
           Josefina começa a caminhar e seguir em frente nessa estrada, que cada
-          vez parece ser mais estreita e as casas maiores seu medo começa a
-          tomar conta, josefina pensa em voltar.
+          vez parece ser mais estreita e as casas maiores, seu medo começa a
+          tomar conta, Josefina pensa em voltar.
         </p>
       </div>
       <div class="bite-botao">
