--- a/historia-personagens/josefina/fase3.html
+++ b/historia-personagens/josefina/fase3.html
@@ -21,11 +21,10 @@
       </div>
       <div class="dialogo">
         <p>
-          josefina continua, e quanto mais ela adentra a esse caminho mais
-          escuro e mais sufocante a sensação fica as moradias parecem ir cada
-          vez mais aumentando de tamanho como se fosse a engolir. josefina pensa
-          se volta pois sua cabeça já nao esta quase mais aguentando esse
-          sentimento de sufocamento.
+          Josefina continua, e quanto mais ela adentra a esse caminho, mais
+          escuro e sufocante fica, as moradias parecem ir cada
+          vez mais aumentando de tamanho, como se fossem a engolir. Josefina pensa
+          se volta pois sua cabeça já nao está mais aguentando esse sufocamento.
         </p>
       </div>
       <div class="bite-botao">
