--- a/historia-personagens/josefina/fase4.html
+++ b/historia-personagens/josefina/fase4.html
@@ -22,13 +22,13 @@
       <div class="dialogo">
         <p>
           Josefina continua a andar com passos largos e sente uma brisa em seu
-          rosto, que faz com que sua respiração começe a voltar. ela já pode
-          avistar sua casa ao longe fazendo com que cada vez mais ela fique
-          aliviada e a brisa cada vez mais batia em seu rosto, entao ela olha
-          para traz e ve que a estrada na verdade era larga com arvores e com
-          algumas moradias, entao Josefina entende que ele tem que enfrentar
-          seus medos por maiores que eles pareçam no inicio mesmo que tentem a
-          esmagar ela entende que podemos ter força para enfrentalos.
+          rosto, que fez com que sua respiração começasse a voltar ao normal. 
+          Ela já podia
+          avistar sua casa ao longe, fazendo com que cada vez mais ela ficasse
+          aliviada. Entao ela olha
+          para traz e percebe que a estrada, na verdade, era larga, com árvores e com
+          algumas moradias, então Josefina entende que ela tem que enfrentar
+          seus medos por maiores que eles pareçam, desde o início, mesmo que parecam gigantes. Ela entendeu que podemos ter força para enfrentá-los.
         </p>
       </div>
       <div class="bite-botao">
