--- a/historia-personagens/josefina/game-over.html
+++ b/historia-personagens/josefina/game-over.html
@@ -21,12 +21,12 @@
       </div>
       <div class="dialogo">
         <p>
-          Josefina não aguenta a pressao da estrada e as moradias cada vez mais
-          a engolindo e descide correr pois o medo a venceu, na sua mente a
-          moradia tomou uma proporção imensa e a engoliu deixando ela imovel,
-          depois de alguns dias sua familia a acha agachada e chorando, e a leva
-          para casa e Josevina passa a vida pensando como seria se ela tivesse
-          enfrentado sua insegurança seu medo por lugares desconhecidos.
+          Josefina não aguenta a pressão da estrada e as moradias cada vez maiores,
+          pareciam engoli-la, ela descide correr, pois o medo a venceu. Na sua mente, a
+          moradia tomou uma proporção imensa e a engoliu, deixando-a imóvel.
+          Depois de alguns dias, sua família a encontra agachada e chorando, e a leva
+          para casa. Josevina passa a vida pensando como seria se ela tivesse
+          enfrentado seu medo por lugares desconhecidos.
         </p>
       </div>
       <div class="bite-botao">
