--- a/historia-personagens/orc/fase1.html
+++ b/historia-personagens/orc/fase1.html
@@ -21,11 +21,11 @@
       </div>
       <div class="dialogo">
         <p>
-          Um dia Morse recebeu a tarefa de sair da sua vila para buscar superar
-          seu medo com o inserto o desconhecido com que fazia ele não pudesse
-          evoluir e se tornar um guerreiro, ele partiu na sua jornada, depois de
-          um tempo numa certa noite ele encontra uma ponte longa e com aparencia
-          sombria, então o medo do inserto começa a aparecer.
+          Um dia, Morse recebeu a tarefa de sair da sua vila para enfrentar o medo do desconhecido. 
+         por ser muito medroso ele nunca pôde evoluir e se
+          tornar um guerreiro. Mesmo com temeroso, ele partiu em sua jornada. Depois de
+          muito caminhar, numa certa noite, ele encontrou uma ponte longa e com
+          aparencia sombria, então surge o medo do incerto.
         </p>
       </div>
       <div class="bite-botao">
