--- a/historia-personagens/orc/fase2.html
+++ b/historia-personagens/orc/fase2.html
@@ -21,11 +21,10 @@
       </div>
       <div class="dialogo">
         <p>
-          Morse então resolve ir até o fim dessa ponte e chegar mais perto da
-          porta, quando ele olha realmente para a porta ve que ela tem uma
-          aparencia de velha e pesada mas se ele forçar ele consegue abri-la,
-          mas sua aparencia tira a sua coragem de empurrada, ele ja esta suando
-          frio por causa de seu medo do desconhecido. mas pensa se a empurra ou
+          Morse então resolve ir até o fim desta ponte, ao final  encontra uma
+          porta,  que tem uma
+          aparência velha e pesada,e isso o desanima a empurrá-la, ele já está suando
+          frio, diante do desconhecido. Ele precisa decidir se a empurra ou
           não.
         </p>
       </div>
