--- a/historia-personagens/orc/fase3.html
+++ b/historia-personagens/orc/fase3.html
@@ -21,10 +21,10 @@
       </div>
       <div class="dialogo">
         <p>
-          Então Morse empurra a porta e ve a sala totalmente escura, nesse ponto
-          seu medo do que não pode ser visto já é imenso e toma conta de quase
-          toda sua mente, mas Morse pensa que se chegou até aqui deve continuar
-          mesmo quase entrando em paralisia por não enxergar nada a sua frente.
+          Então, Morse empurra a porta e nota uma sala totalmente escura. Nesse ponto
+          seu medo  já é imenso e toma conta de quase
+          toda sua mente, mas Morse pensa que se chegou até aqui, deve continuar
+          mesmo quase entrando em paralisia, por não enxergar nada a sua frente.
         </p>
       </div>
       <div class="bite-botao">
