--- a/historia-personagens/orc/fase4.html
+++ b/historia-personagens/orc/fase4.html
@@ -21,12 +21,12 @@
       </div>
       <div class="dialogo">
         <p>
-          Morse se ve totalmente no breu no escuro completo, nessa hora sua
-          mente começa a pregar peças com ele seu corpo perde um pouco da
-          mobilidade suas mãos tremem seus olhos forçam tanto para poder ver
-          algo que quase são esmagados pela suas palpebras, a unica coisa que
-          Morse tem neste momento são as paredes asperas e um pequeno ponto luz
-          ao final dessa sala imensa de breu.
+          Morse se ve totalmente no breu completo, nessa hora sua
+          mente começa a pregar peças com ele, seu corpo perde um pouco da
+          mobilidade, suas mãos tremem, seus olhos forçam tanto para poder ver
+          algo, que quase são esmagados pela suas pálpebras, a única coisa que
+          Morse tem neste momento são paredes ásperas e um pequeno ponto luz
+          ao final desta sala imensa de breu.
         </p>
       </div>
       <div class="bite-botao">
