--- a/historia-personagens/orc/fase5.html
+++ b/historia-personagens/orc/fase5.html
@@ -21,14 +21,14 @@
       </div>
       <div class="dialogo">
         <p>
-          Morse tenta manter a respiração controlada e vai com auxilio das
-          paredes caminhando até o ponto de luz, e descobre que é um buraco de
-          uma fechadura então ele resolve abrir e se depara com um lindo jardim
-          com um lago que reflete a linda do luar fazendo com que todo o esforço
-          que Morse teve para enfrentar o medo do desconhecido valesse a pena no
-          final, ele percebeu que enfrentar seus medos é ruim e doi mas no final
-          a reconpensa é grande agora ele pode voltar a sua vila e se tornar o
-          grande guerreiro que ele gostaria de ser, desbravando mais terras.
+          Morse tenta manter a respiração controlada e vai, com auxílio das
+          paredes, caminhando até o ponto de luz e descobre que é o buraco de
+          uma fechadura, então ele resolve abrir. Ele se depara com um lindo jardim,
+          com um lago que reflete a luz do luar. Assim, todo o esforço
+          que Morse teve para enfrentar o medo do desconhecido valeu à pena no
+          final, ele percebeu que enfrentar seus medos foi ruim e doeu, mas no final
+          a reconpensa foi grande, agora ele pode voltar para sua vila e se tornar o
+          grande guerreiro que gostaria de ser, desbravando mais terras.
         </p>
       </div>
       <div class="bite-botao">
