--- a/historia-personagens/orc/game-over.html
+++ b/historia-personagens/orc/game-over.html
@@ -21,13 +21,12 @@
       </div>
       <div class="dialogo">
         <p>
-          Morse desiste e vira para tras para ir embora pois seu medo é muito
-          grande mas quando ele ve uma grande massa negra o engole e leva para
-          um abismo sem fim dentro de sua mente, fazendo com que ele volte para
-          sua vila e viva uma vida completamente sem aventuras mais clara
-          possivel, seu sonho de se tornar um guerrreiro e desbravar terras
-          desconhecidas nunca acontece e ele morre sem conseguir superar seu
-          medo.
+          Morse desiste e vai embora, pois seu medo é muito grande, mas quando
+          ele se vira avista uma enorme massa negra, que o engole e o leva para
+          um abismo sem fim, dentro de sua mente, fazendo com que ele voltasse
+          para a vila, vivendo uma vida completamente sem aventuras, e seu sonho
+          de se tornar um guerrreiro e desbravar terras desconhecidas nunca
+          aconteceu e ele morre sem conseguir superar seu medo.
         </p>
       </div>
       <div class="bite-botao">
