--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
     <title>Abismo</title>
   </head>
   <body>
-   <a href="./creditos/cretidos.html"> <pre>
+    <a href="./creditos/cretidos.html">
+      <pre>
         
         
         ▄▀▀█▄       ▄▀▀█▄▄       ▄▀▀█▀▄        ▄▀▀▀▀▄      ▄▀▀▄ ▄▀▄      ▄▀▀▀▀▄  
@@ -25,7 +26,8 @@
         █   ▄▀       ▄▀▄▄▄▀       ▄▀▀▀▀▀▄       █▀▀▀       ▄▀   ▄▀         ▀▀▀▀   
         ▐   ▐       █    ▐       █       █      ▐          █    █                 
                     ▐            ▐       ▐                 ▐    ▐           </pre
-    ></a>
+      >
+    </a>
     <div class="escolha-personagens">
       <div class="personagens">
         <div title="orc" class="orc"></div>
@@ -36,9 +38,10 @@
       <div class="descricao-personagens">
         <div class="label-orc">
           <p>
-            Morse sempre foi um orc com muito medo do inserto, do que não lhe
-            parecia seguro ou conhecido do inserto.
-            -Quer ajudar o Orc Morse a superar esse medo? 
+            Morse sempre foi um orc com muito medo do incerto, do que não lhe
+            parecia seguro ou conhecido: <br>
+            -Quer ajudar o Orc Morse a superar esse
+            medo?
           </p>
           <a href="./historia-personagens/orc/fase1.html" class="botao">
             <img src="./Botoes/botao.png" alt="selecionar" class="imagem" />
@@ -49,7 +52,8 @@
           <p>
             Bite sempre gostou de estar rodeado de pessoas, quando ficava
             sozinho ficava triste e procurava por alguém, seu medo de solidão é
-            imenso: -Você quer embarcar nessa aventura? e ajudar bite a superar
+            imenso: <br>
+            -Você quer embarcar nessa aventura? e ajudar bite a superar
             isso?
           </p>
           <a href="./historia-personagens/bite/fase1.html" class="botao">
@@ -59,10 +63,11 @@
 
         <div class="label-josefina">
           <p>
-            josefina sempre teve medo de lugares onde não conhece, nunca indo
-            muito longe da onde ela mora, e agora ela tem que fazer uma tarefa
-            para poder sobreviver em um tempo escasso: <br />
-            -Você quer ajudar a Josefina enfrentar seu medo do desconhecido?
+            Josefina sempre teve medo de lugares onde ela nunca esteve, agora
+            ela tem que fazer uma tarefa para poder sobreviver em um tempo
+            escasso: <br>
+            -Você quer ajudar a Josefina enfrentar seu medo do
+            desconhecido?
           </p>
           <a href="./historia-personagens/josefina/fase1.html" class="botao">
             <img src="./Botoes/botao.png" alt="selecionar" class="imagem" />
