--- a/creditos/cretidos.html
+++ b/creditos/cretidos.html
@@ -14,6 +14,9 @@
     <title>Créditos</title>
   </head>
   <body>
+    <div class="hello" >
+      <img class="word" src="hello word.png" alt="hello world-cara-feliz">
+    </div>
     <div class="creditos">
       <p class="creditos-texto">
         Queria começar agradecendo à Resilia Educação pela oportunidade
