while e link para o menu direto do creditos. 1.08

--- a/creditos/cretidos.html
+++ b/creditos/cretidos.html
@@ -14,8 +14,8 @@
     <title>Créditos</title>
   </head>
   <body>
-    <div class="hello" >
-      <img class="word" src="hello word.png" alt="hello world-cara-feliz">
+    <div class="hello" ><a href='../../index.html'>
+      <img class="word" src="hello word.png" alt="hello world-cara-feliz"></a>
     </div>
     <div class="creditos">
       <p class="creditos-texto">
@@ -33,7 +33,6 @@
       </p>
     </div>
     <div class="audio">
-      +
       <audio preload="auto" autoplay="auto" controls>
         <source src="hello-world.mp3" type="audio/mpeg" />
       </audio>
