link index pelo git 2.0

--- a/creditos/cretidos.html
+++ b/creditos/cretidos.html
@@ -14,7 +14,7 @@
     <title>Créditos</title>
   </head>
   <body>
-    <div class="hello" ><a href='../index.html'>
+    <div class="hello" ><a href='https://davi33-emanoel.github.io/Abismo_rpg/'>
       <img class="word" src="hello word.png" alt="hello world-cara-feliz"></a>
     </div>
     <div class="creditos">
