Arrumando versao do js, abismo 2.01

--- a/historia-personagens/bite/fase3.html
+++ b/historia-personagens/bite/fase3.html
@@ -12,7 +12,7 @@
       rel="stylesheet"
     />
     <title>Fase-3-Bite</title>
-    <script src="../../js/abismo.js" defer></script>
+    <script src="../../js/abismo2.js" defer></script>
   </head>
   <body>
     <div class="fundo">
@@ -24,11 +24,14 @@
           Bite decide enfrenter seu medo da solidão e pega um livro para
           ler, assim se tornando cada vez mais confiante, vivendo cada dia
           melhor consigo mesmo.<br> É importante enfrentarmos o medo da solidão, pois
-          nos torma mais fortes e confiantes.
+          nos torma mais fortes e confiantes.<br>
+          <ol>
+            <li>Volte ao menu e ajude os outros personagens a superar seus medos</li>
+          </ol>
         </p>
       </div>
       <div class="bite-botao">
-        <button type="button" class="botao" onclick="escolha_bite3();">
+        <button type="button" class="botao" onclick="chamar_prompt('escolha 1', '../../index.html', morte_bite)";>
           <img src="../../Botoes/selecionar.png" class="imagem" alt="" />
         </button>
       </div>
