--- a/historia-personagens/bite/game_over.html
+++ b/historia-personagens/bite/game_over.html
@@ -26,7 +26,11 @@
           atrás de sua mulher, tornando-o dependente a vida toda de outras
           pessoas, ficando triste por não tentar seguir sozinho e descobrir
           coisas por sí próprio. Quer tentar diferente e ajudar Bite a enfrentar
-          seu medo para dar mais esperança a ele??
+          seu medo para dar mais esperança a ele??<br>
+          <ol>
+            <li>para tentar novamente </li>
+            <li>ir para o menu para jogar com os outros personagens</li>
+          </ol>
         </p>
       </div>
       <div class="bite-botao">
