--- a/historia-personagens/bite/fase1.html
+++ b/historia-personagens/bite/fase1.html
@@ -12,7 +12,7 @@
       rel="stylesheet"
     />
     <title>Fase-1-Bite</title>
-    <script src="../../js/abismo.js" defer></script>
+    <script src="../../js/abismo2.js" defer></script>
   </head>
   <body>
     <div class="fundo">
@@ -25,10 +25,14 @@
           teve que cuidar da casa e, assim, tendo que enfrentar seu maior medo
           de ficar sozinho.<br>
            Ficar e cuidar da casa??
+           <ol>
+            <li>ficar,</li>
+            <li>nao ficar</li>
+          </ol>
         </p>
       </div>
       <div class="bite-botao">
-        <button type="button" class="botao" onclick="escolha_bite1();">
+        <button type="button" class="botao" onclick="chamar_prompt('escolha 1 ou 2', './fase2.html', morte_bite)";>
           <img src="../../Botoes/selecionar.png" class="imagem" alt="" />
         </button>
       </div>
