--- a/historia-personagens/bite/fase2.html
+++ b/historia-personagens/bite/fase2.html
@@ -12,7 +12,7 @@
       rel="stylesheet"
     />
     <title>Fase-2-Bite</title>
-    <script src="../../js/abismo.js" defer></script>
+    <script src="../../js/abismo2.js" defer></script>
   </head>
   <body>
     <div class="fundo">
@@ -24,11 +24,15 @@
           Bite olha uma estante de livros quando seu medo
           aparece, ele se depara com a estante de livros, que começa a tomar
           uma forma assustadora em sua mente. O seu medo de ficar sozinho toma
-          conta de seu corpo todo, então Bite tem uma decisão:
+          conta de seu corpo todo, então Bite tem uma decisão:<br>
+          <ol>
+            <li>enfrentar seu medo,</li>
+            <li>desistir e buscar ajuda?</li>
+          </ol>
         </p>
       </div>
       <div class="bite-botao">
-        <button type="button" class="botao" onclick="escolha_bite2();">
+        <button type="button" class="botao" onclick="chamar_prompt('escolha 1 ou 2', './fase3.html', morte_bite)";>
           <img src="../../Botoes/selecionar.png" class="imagem" alt="" />
         </button>
       </div>
