Novo caminho para o js da josefina, abismo 2.02

--- a/historia-personagens/josefina/fase4.html
+++ b/historia-personagens/josefina/fase4.html
@@ -12,7 +12,7 @@
       rel="stylesheet"
     />
     <title>Fase-1-Josefina</title>
-    <script src="../../js/abismo.js" defer></script>
+    <script src="../../js/abismo2.js" defer></script>
   </head>
   <body>
     <div class="fundo">
@@ -29,10 +29,13 @@
           para traz e percebe que a estrada, na verdade, era larga, com árvores e com
           algumas moradias, então Josefina entende que ela tem que enfrentar
           seus medos por maiores que eles pareçam, desde o início, mesmo que parecam gigantes. Ela entendeu que podemos ter força para enfrentá-los.
+          <ol>
+            <li>Se quiser ajudar os outros personagens a enfrentarem seus medos vá para o menu</li>
+          </ol>
         </p>
       </div>
       <div class="bite-botao">
-        <button type="button" class="botao" onclick="escolha_josefina4();">
+        <button type="button" class="botao" onclick="chamar_prompt('escolha 1 para ir para o menu', '../../index.html', morte_josefina)";>
           <img src="../../Botoes/selecionar.png" class="imagem" alt="" />
         </button>
       </div>
