--- a/historia-personagens/bite/game_over.html
+++ b/historia-personagens/bite/game_over.html
@@ -12,7 +12,7 @@
       rel="stylesheet"
     />
     <title>Gme-over-bite</title>
-    <script src="../../js/abismo.js" defer></script>
+    <script src="../../js/abismo2.js" defer></script>
   </head>
   <body>
     <div class="fundo">
@@ -34,7 +34,7 @@
         </p>
       </div>
       <div class="bite-botao">
-        <button type="button" class="botao" onclick="escolha_bite();">
+        <button type="button" class="botao" onclick="chamar_prompt('escolha 1 ou 2', './fase1.html', '../../index.html')";>
           <img src="../../Botoes/selecionar.png" class="imagem" alt="" />
         </button>
       </div>
