--- a/historia-personagens/josefina/fase1.html
+++ b/historia-personagens/josefina/fase1.html
@@ -12,7 +12,7 @@
       rel="stylesheet"
     />
     <title>Fase-1-Josefina</title>
-    <script src="../../js/abismo.js" defer></script>
+    <script src="../../js/abismo2.js" defer></script>
   </head>
   <body>
     <div class="fundo">
@@ -28,10 +28,14 @@
           moradias acompanhando o caminho, que parecia ser muito longo,quase sem
           fim, e sua insegurança começou a aumentar diante do novo.<br/>
           Continuar nessa estrada?
+          <ol>
+            <li>Continuar nessa estrada,</li>
+            <li>ou voltar</li>
+          </ol>
         </p>
       </div>
       <div class="bite-botao">
-        <button type="button" class="botao" onclick="escolha_josefina1();">
+        <button type="button" class="botao" onclick="chamar_prompt('escolha 1 ou 2', './fase2.html', morte_josefina)";>
           <img src="../../Botoes/selecionar.png" class="imagem" alt="" />
         </button>
       </div>
