--- a/historia-personagens/josefina/fase2.html
+++ b/historia-personagens/josefina/fase2.html
@@ -12,7 +12,7 @@
       rel="stylesheet"
     />
     <title>Fase-1-Josefina</title>
-    <script src="../../js/abismo.js" defer></script>
+    <script src="../../js/abismo2.js" defer></script>
   </head>
   <body>
     <div class="fundo">
@@ -24,10 +24,14 @@
           Josefina começa a caminhar e seguir em frente nessa estrada, que cada
           vez parece ser mais estreita e as casas maiores, seu medo começa a
           tomar conta, Josefina pensa em voltar.
+          <ol>
+            <li>Continuar caminhando,</li>
+            <li>ou voltar mesmo com o perigo dos ladinos?</li>
+          </ol>
         </p>
       </div>
       <div class="bite-botao">
-        <button type="button" class="botao" onclick="escolha_josefina2();">
+        <button type="button" class="botao" onclick="chamar_prompt('escolha 1 ou 2', './fase3.html', morte_josefina)";>
           <img src="../../Botoes/selecionar.png" class="imagem" alt="" />
         </button>
       </div>
