--- a/historia-personagens/josefina/fase3.html
+++ b/historia-personagens/josefina/fase3.html
@@ -12,7 +12,7 @@
       rel="stylesheet"
     />
     <title>Fase-1-Josefina</title>
-    <script src="../../js/abismo.js" defer></script>
+    <script src="../../js/abismo2.js" defer></script>
   </head>
   <body>
     <div class="fundo">
@@ -25,10 +25,15 @@
           escuro e sufocante fica, as moradias parecem ir cada
           vez mais aumentando de tamanho, como se fossem a engolir. Josefina pensa
           se volta pois sua cabeça já nao está mais aguentando esse sufocamento.
+          Josefina está quase no fim, mas a pressão na sua mente é enorme.
+          <ol>
+            <li>continuar</li>
+            <li>voltar</li>
+          </ol>
         </p>
       </div>
       <div class="bite-botao">
-        <button type="button" class="botao" onclick="escolha_josefina3();">
+        <button type="button" class="botao" onclick="chamar_prompt('escolha 1 ou 2', './fase4.html', morte_josefina)";>
           <img src="../../Botoes/selecionar.png" class="imagem" alt="" />
         </button>
       </div>
