--- a/historia-personagens/josefina/game-over.html
+++ b/historia-personagens/josefina/game-over.html
@@ -12,7 +12,7 @@
       rel="stylesheet"
     />
     <title>Fase-1-Josefina</title>
-    <script src="../../js/abismo.js" defer></script>
+    <script src="../../js/abismo2.js" defer></script>
   </head>
   <body>
     <div class="fundo">
@@ -27,10 +27,14 @@
           Depois de alguns dias, sua família a encontra agachada e chorando, e a leva
           para casa. Josevina passa a vida pensando como seria se ela tivesse
           enfrentado seu medo por lugares desconhecidos.
+          <ol>
+            <li>se quiser tentar novamente,</li>
+            <li>se quiser ir para o menu.</li>
+          </ol>
         </p>
       </div>
       <div class="bite-botao">
-        <button type="button" class="botao" onclick="escolha_josefina_game_over();">
+        <button type="button" class="botao" onclick="chamar_prompt('escolha 1 ou 2', './fase1.html', '../../index.html')";>
           <img src="../../Botoes/selecionar.png" class="imagem" alt="" />
         </button>
       </div>
