novo caminho do js, orc abismo 2.03

--- a/historia-personagens/orc/fase1.html
+++ b/historia-personagens/orc/fase1.html
@@ -12,7 +12,7 @@
       rel="stylesheet"
     />
     <title>Fase-1-Josefina</title>
-    <script src="../../js/abismo.js" defer></script>
+    <script src="../../js/abismo2.js" defer></script>
   </head>
   <body>
     <div class="fundo">
@@ -26,10 +26,14 @@
           tornar um guerreiro. Mesmo com temeroso, ele partiu em sua jornada. Depois de
           muito caminhar, numa certa noite, ele encontrou uma ponte longa e com
           aparencia sombria, então surge o medo do incerto.
+          <ol>
+            <li>enfrentar o medo,</li>
+            <li>voltar para a vila?</li>
+          </ol>
         </p>
       </div>
       <div class="bite-botao">
-        <button type="button" class="botao" onclick="escolha_orc1();">
+        <button type="button" class="botao" onclick="chamar_prompt('escolha 1 ou 2', './fase2.html', morte_orc)";>
           <img src="../../Botoes/selecionar.png" class="imagem" alt="" />
         </button>
       </div>
