--- a/historia-personagens/orc/fase3.html
+++ b/historia-personagens/orc/fase3.html
@@ -12,7 +12,7 @@
       rel="stylesheet"
     />
     <title>Fase-3-ORC</title>
-    <script src="../../js/abismo.js" defer></script>
+    <script src="../../js/abismo2.js" defer></script>
   </head>
   <body>
     <div class="fundo">
@@ -24,11 +24,16 @@
           Então, Morse empurra a porta e nota uma sala totalmente escura. Nesse ponto
           seu medo  já é imenso e toma conta de quase
           toda sua mente, mas Morse pensa que se chegou até aqui, deve continuar
-          mesmo quase entrando em paralisia, por não enxergar nada a sua frente.
+          mesmo quase entrando em paralisia, por não enxergar nada a sua frente.<br>
+          Ele entra ou deixa o medo tomar conta por completo?
+          <ol>
+            <li>Entrar</li>
+            <li>Voltar</li>
+          </ol>
         </p>
       </div>
       <div class="bite-botao">
-        <button type="button" class="botao" onclick="escolha_orc3();">
+        <button type="button" class="botao" onclick="chamar_prompt('escolha 1 ou 2', './fase4.html', morte_orc)";>
           <img src="../../Botoes/selecionar.png" class="imagem" alt="" />
         </button>
       </div>
