--- a/historia-personagens/orc/fase5.html
+++ b/historia-personagens/orc/fase5.html
@@ -12,7 +12,7 @@
       rel="stylesheet"
     />
     <title>Fase-5-ORC</title>
-    <script src="../../js/abismo.js" defer></script>
+    <script src="../../js/abismo2.js" defer></script>
   </head>
   <body>
     <div class="fundo">
@@ -29,10 +29,13 @@
           final, ele percebeu que enfrentar seus medos foi ruim e doeu, mas no final
           a reconpensa foi grande, agora ele pode voltar para sua vila e se tornar o
           grande guerreiro que gostaria de ser, desbravando mais terras.
+          <ol>
+            <li>Morse agora pode enfrentar os medos que surgirem em sua vida. Se quiser voltar ao menu e ajudar aos outros personagens.</li>
+          </ol>
         </p>
       </div>
       <div class="bite-botao">
-        <button type="button" class="botao" onclick="escolha_orc5();">
+        <button type="button" class="botao" onclick="chamar_prompt('escolha 1', '../../index.html', morte_orc)";>
           <img src="../../Botoes/selecionar.png" class="imagem" alt="" />
         </button>
       </div>
