--- a/historia-personagens/orc/fase4.html
+++ b/historia-personagens/orc/fase4.html
@@ -12,7 +12,7 @@
       rel="stylesheet"
     />
     <title>Fase-4-ORC</title>
-    <script src="../../js/abismo.js" defer></script>
+    <script src="../../js/abismo2.js" defer></script>
   </head>
   <body>
     <div class="fundo">
@@ -26,11 +26,16 @@
           mobilidade, suas mãos tremem, seus olhos forçam tanto para poder ver
           algo, que quase são esmagados pela suas pálpebras, a única coisa que
           Morse tem neste momento são paredes ásperas e um pequeno ponto luz
-          ao final desta sala imensa de breu.
+          ao final desta sala imensa de breu.<br>
+          Morse deve continuar para chegar ao final e encontrar o ponto de luz ou voltar e desistir?
+          <ol>
+            <li>Continuar</li>
+            <li>Voltar</li>
+          </ol>
         </p>
       </div>
       <div class="bite-botao">
-        <button type="button" class="botao" onclick="escolha_orc4();">
+        <button type="button" class="botao" onclick="chamar_prompt('escolha 1 ou 2', './fase5.html', morte_orc)";>
           <img src="../../Botoes/selecionar.png" class="imagem" alt="" />
         </button>
       </div>
