--- a/historia-personagens/orc/game-over.html
+++ b/historia-personagens/orc/game-over.html
@@ -12,7 +12,7 @@
       rel="stylesheet"
     />
     <title>Fase-Game-over-ORC</title>
-    <script src="../../js/abismo.js" defer></script>
+    <script src="../../js/abismo2.js" defer></script>
   </head>
   <body>
     <div class="fundo">
@@ -27,10 +27,14 @@
           para a vila, vivendo uma vida completamente sem aventuras, e seu sonho
           de se tornar um guerrreiro e desbravar terras desconhecidas nunca
           aconteceu e ele morre sem conseguir superar seu medo.
+          <ol>
+            <li>Se quiser tentar novamente,</li>
+            <li>se quiser ir para o menu digite menu</li>
+          </ol>
         </p>
       </div>
       <div class="bite-botao">
-        <button type="button" class="botao" onclick="escolha_orc6();">
+        <button type="button" class="botao" onclick="chamar_prompt('escolha 1 ou 2', './fase1.html', '../../index.html')";>
           <img src="../../Botoes/selecionar.png" class="imagem" alt="" />
         </button>
       </div>
